package com.sda.patterns.behavioral.command.challenge;

public interface Action {

	void perform();
}
