package com.sda.patterns.behavioral.command.challenge;

public interface Editor {

    void save();

    void open();

    void close();
}
